--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h2>I'M a Web Developer</h2>
     <hr/>
     <a href="./public/movie.html"><h1>MOVIE RANKING PROJECT</h1></a>
-    <img src="./images/Screenshot 2025-04-17 at 3.59.50 PM.png" height="200px" alt="RANKING" />
+    <img src="./images/movie.png" height="200px" alt="RANKING" />
     <a href="./public/invite.html"><h1>BIRTHDAY INVITE PROJECT</h1></a>
-    <img src="./images/Screenshot 2025-04-17 at 4.00.46 PM.png" height="200px" alt="INVITATION"/>
+    <img src="./images/invite.png" height="200px" alt="INVITATION"/>
     <hr/>
     <a href="./public/about.html"><h1>ABOUT ME</h1></a>
     <a href="./public/contact.html"><h1>CONTACT</h1></a>
